@@ -550,6 +550,11 @@ specifier|final
 name|int
 name|position
 decl_stmt|;
+DECL|field|term
+specifier|final
+name|Term
+name|term
+decl_stmt|;
 DECL|method|PostingsAndFreq
 specifier|public
 name|PostingsAndFreq
@@ -562,6 +567,9 @@ name|docFreq
 parameter_list|,
 name|int
 name|position
+parameter_list|,
+name|Term
+name|term
 parameter_list|)
 block|{
 name|this
@@ -581,6 +589,12 @@ operator|.
 name|position
 operator|=
 name|position
+expr_stmt|;
+name|this
+operator|.
+name|term
+operator|=
+name|term
 expr_stmt|;
 block|}
 DECL|method|compareTo
@@ -592,12 +606,220 @@ name|PostingsAndFreq
 name|other
 parameter_list|)
 block|{
+if|if
+condition|(
+name|docFreq
+operator|==
+name|other
+operator|.
+name|docFreq
+condition|)
+block|{
+if|if
+condition|(
+name|position
+operator|==
+name|other
+operator|.
+name|position
+condition|)
+block|{
+return|return
+name|term
+operator|.
+name|compareTo
+argument_list|(
+name|other
+operator|.
+name|term
+argument_list|)
+return|;
+block|}
+return|return
+name|position
+operator|-
+name|other
+operator|.
+name|position
+return|;
+block|}
 return|return
 name|docFreq
 operator|-
 name|other
 operator|.
 name|docFreq
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|prime
+init|=
+literal|31
+decl_stmt|;
+name|int
+name|result
+init|=
+literal|1
+decl_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+name|docFreq
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+name|position
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+operator|(
+name|term
+operator|==
+literal|null
+operator|)
+condition|?
+literal|0
+else|:
+name|term
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+return|return
+name|result
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|obj
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|obj
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|getClass
+argument_list|()
+operator|!=
+name|obj
+operator|.
+name|getClass
+argument_list|()
+condition|)
+return|return
+literal|false
+return|;
+name|PostingsAndFreq
+name|other
+init|=
+operator|(
+name|PostingsAndFreq
+operator|)
+name|obj
+decl_stmt|;
+if|if
+condition|(
+name|docFreq
+operator|!=
+name|other
+operator|.
+name|docFreq
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|position
+operator|!=
+name|other
+operator|.
+name|position
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|term
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|term
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|term
+operator|.
+name|equals
+argument_list|(
+name|other
+operator|.
+name|term
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+return|return
+literal|true
 return|;
 block|}
 block|}
@@ -983,6 +1205,8 @@ argument_list|)
 operator|.
 name|intValue
 argument_list|()
+argument_list|,
+name|t
 argument_list|)
 expr_stmt|;
 block|}
