@@ -36,6 +36,15 @@ name|MERGESORT_THRESHOLD
 init|=
 literal|12
 decl_stmt|;
+DECL|field|MERGE_TO_QUICKSORT_THRESHOLD
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|MERGE_TO_QUICKSORT_THRESHOLD
+init|=
+literal|40
+decl_stmt|;
 DECL|field|QUICKSORT_THRESHOLD
 specifier|private
 specifier|static
@@ -184,6 +193,31 @@ name|lo
 parameter_list|,
 name|int
 name|hi
+parameter_list|)
+block|{
+name|quickSort
+argument_list|(
+name|lo
+argument_list|,
+name|hi
+argument_list|,
+name|MERGE_TO_QUICKSORT_THRESHOLD
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|quickSort
+specifier|private
+name|void
+name|quickSort
+parameter_list|(
+name|int
+name|lo
+parameter_list|,
+name|int
+name|hi
+parameter_list|,
+name|int
+name|maxDepth
 parameter_list|)
 block|{
 specifier|final
@@ -358,11 +392,44 @@ block|{
 break|break;
 block|}
 block|}
+comment|// fall back to merge sort when recursion depth gets too big
+if|if
+condition|(
+name|maxDepth
+operator|==
+literal|0
+condition|)
+block|{
+comment|// for testing: new Exception("Hit recursion depth limit").printStackTrace();
+name|mergeSort
+argument_list|(
+name|lo
+argument_list|,
+name|left
+argument_list|)
+expr_stmt|;
+name|mergeSort
+argument_list|(
+name|left
+operator|+
+literal|1
+argument_list|,
+name|hi
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+operator|--
+name|maxDepth
+expr_stmt|;
 name|quickSort
 argument_list|(
 name|lo
 argument_list|,
 name|left
+argument_list|,
+name|maxDepth
 argument_list|)
 expr_stmt|;
 name|quickSort
@@ -372,8 +439,11 @@ operator|+
 literal|1
 argument_list|,
 name|hi
+argument_list|,
+name|maxDepth
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|/** Sorts via stable in-place MergeSort algorithm    * For small collections falls back to {@link #insertionSort(int,int)}. */
 DECL|method|mergeSort
