@@ -927,6 +927,140 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|createSparseRandomArray
+specifier|private
+name|Integer
+index|[]
+name|createSparseRandomArray
+parameter_list|(
+name|int
+name|maxSize
+parameter_list|)
+block|{
+specifier|final
+name|Integer
+index|[]
+name|a
+init|=
+operator|new
+name|Integer
+index|[
+name|random
+operator|.
+name|nextInt
+argument_list|(
+name|maxSize
+argument_list|)
+operator|+
+literal|1
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|a
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|a
+index|[
+name|i
+index|]
+operator|=
+name|Integer
+operator|.
+name|valueOf
+argument_list|(
+name|random
+operator|.
+name|nextInt
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|a
+return|;
+block|}
+comment|// This is a test for LUCENE-3054 (which fails without the merge sort fall back with stack overflow in most cases)
+DECL|method|testQuickToMergeSortFallback
+specifier|public
+name|void
+name|testQuickToMergeSortFallback
+parameter_list|()
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|,
+name|c
+init|=
+literal|500
+operator|*
+name|RANDOM_MULTIPLIER
+init|;
+name|i
+operator|<
+name|c
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Integer
+index|[]
+name|a1
+init|=
+name|createSparseRandomArray
+argument_list|(
+literal|40000
+argument_list|)
+decl_stmt|,
+name|a2
+init|=
+name|a1
+operator|.
+name|clone
+argument_list|()
+decl_stmt|;
+name|ArrayUtil
+operator|.
+name|quickSort
+argument_list|(
+name|a1
+argument_list|)
+expr_stmt|;
+name|Arrays
+operator|.
+name|sort
+argument_list|(
+name|a2
+argument_list|)
+expr_stmt|;
+name|assertArrayEquals
+argument_list|(
+name|a2
+argument_list|,
+name|a1
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testMergeSort
 specifier|public
 name|void
